cmake_minimum_required(VERSION 3.14)

project(sirenS LANGUAGES CXX)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core)
# find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core)
find_package(Threads REQUIRED)

add_executable(sirenS
  main.cpp
  server.h
  server.cpp
)

target_link_libraries(sirenS
  PRIVATE
    # Qt${QT_VERSION_MAJOR}::Core
    Threads::Threads
)

install(TARGETS sirenS
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
